[package]
name = "pbft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.21.1", features = ["full"] }
tokio-util = {version = "0.7.4", features = ["codec"]}
serde = {version = "1.0.147", features = ["derive"]}
serde_json = "1.0.87"
sha2 = "0.10.6"
ed25519-dalek = "1.0.1"
rand = "0.7.3"
env_logger = "0.7.1"
log = "0.4.17"